# respeaker2-configurator

./: README.md  main.py  pyproject.toml
respeaker2/: PixelRing.py  RespeakerClient.py  RespeakerConfig.py  RespeakerDFU.py  RespeakerDiscovery.py  RespeakerParam.py  RespeakerService.py
