[project]
name = "respeaker2-configurator"
version = "0.1.0"
description = "A simple configurator GUI for the ReSpeaker Mic Array v2.0."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duit[nicegui]>=0.1.20a2",
    "pyusb>=1.3.1",
    "pywebview>=5.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
    "ruff>=0.12.10",
]

[tool.ruff.lint]
extend-select = ["B"]
